# configs

./: tmux.conf  wezterm.lua
nvim/: init.lua  lazy-lock.json
nvim-old/: lazy-lock.json
nvim-old/lua/plugins/: catppuccin.lua  completions.lua  lualine.lua  neo-tree.lua  telescope.lua
nvim/lua/: vim-options.lua
nvim/lua/custom/plugins/: init.lua
nvim/lua/plugins/: catppuccin.lua  copilot-chat.lua  copilot-vim.lua  debugging.lua  iron.lua  lsp-config.lua  treesitter.lua
pyproject/: pyproject.toml
wezterm/: wezterm.lua
