[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-name"
version = "0.1.0"
description = "A description of the project"
readme = "README.md"
license = "some license"
requires-python = ">=3.6"
dependencies = [
    "dependency1",
    "dependency2",
    "dependency3",
]

[project-urls]
repository = "link to repository"

[project-optional-dependencies]
dev = [
    "dev-dependency1",
    "dev-dependency2",
    "dev-dependency3",
]
test = [
    "test-dependency1",
    "test-dependency2",
    "test-dependency3",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM",     # ruff format
    "CPY",     # WTF?!

    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls

    "S101",    # assert
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG004",  # unused arguments
    "ANN401",  # dynamic type annotation
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

